--- a/survey_item.Rmd
+++ b/survey_item.Rmd
@@ -97,7 +97,7 @@ colnames(data.all)
 
 # composite score for ambiguity attitude
 
-select
+## select and change data type to integer
 ```{r}
 
 # # change in total time of checking news per day (not sure if subtracting is proper because scale is not linear)
@@ -105,24 +105,24 @@ select
 # 
 # news_change
 
-
-# tracking news
 ambig_score <- data.all %>% select(mTurkCode, 
                                    # news
                                    ambig1_news_perday, ambig1_news_before, ambig1_track_deaths,
                                    # how well-informed
                                    ambig1_gov_local, ambig1_you, ambig1_gov_national, ambig1_scientists, ambig1_health_worker, ambig1_economists, ambig1_family_friend,
                                    # reaction
-                                   ambig1_react_nation, ambig1_react_state, ambig1_react_science, ambig1_react_worker, ambig1_react_econ, ambig1_react_you,
+                                   # ambig1_react_nation, ambig1_react_state, ambig1_react_science, ambig1_react_worker, ambig1_react_econ, ambig1_react_you,
                                    #health or economics
-                                   ambig2_health_impact, ambig2_economics,
+                                   # ambig2_health_impact, ambig2_economics,
+                                   # current state
+                                   ambig3_current_covi1, ambig3_current_covi2,
                                    # how likely will be infected
                                    ambig3_you_infect, ambig3_family_infect
                                    )
 
 ```
 
-correct levels
+correct factor levels an turn into integer
 ```{r}
 ambig_score$mTurkCode <- as.factor(as.character(ambig_score$mTurkCode))
 
@@ -139,16 +139,19 @@ ambig_score$ambig1_economists <- as.integer(as.character(ambig_score$ambig1_econ
 ambig_score$ambig1_family_friend <- as.integer(as.character(ambig_score$ambig1_family_friend))
 
 
-ambig_score$ambig1_react_nation <- as.integer(as.character(ambig_score$ambig1_react_nation))
-ambig_score$ambig1_react_state <- as.integer(as.character(ambig_score$ambig1_react_state))
-ambig_score$ambig1_react_science <- as.integer(as.character(ambig_score$ambig1_react_science))
-ambig_score$ambig1_react_worker <- as.integer(as.character(ambig_score$ambig1_react_worker))
-ambig_score$ambig1_react_econ <- as.integer(as.character(ambig_score$ambig1_react_econ))
-ambig_score$ambig1_react_you <- as.integer(as.character(ambig_score$ambig1_react_you))
+# ambig_score$ambig1_react_nation <- as.integer(as.character(ambig_score$ambig1_react_nation))
+# ambig_score$ambig1_react_state <- as.integer(as.character(ambig_score$ambig1_react_state))
+# ambig_score$ambig1_react_science <- as.integer(as.character(ambig_score$ambig1_react_science))
+# ambig_score$ambig1_react_worker <- as.integer(as.character(ambig_score$ambig1_react_worker))
+# ambig_score$ambig1_react_econ <- as.integer(as.character(ambig_score$ambig1_react_econ))
+# ambig_score$ambig1_react_you <- as.integer(as.character(ambig_score$ambig1_react_you))
 
 
-ambig_score$ambig2_health_impact <- as.integer(as.character(ambig_score$ambig2_health_impact))
-ambig_score$ambig2_economics <- as.integer(as.character(ambig_score$ambig2_economics))
+# ambig_score$ambig2_health_impact <- as.integer(as.character(ambig_score$ambig2_health_impact))
+# ambig_score$ambig2_economics <- as.integer(as.character(ambig_score$ambig2_economics))
+
+ambig_score$ambig3_current_covi1 <- as.integer(as.character(ambig_score$ambig3_current_covi1))
+ambig_score$ambig3_current_covi2 <- as.integer(as.character(ambig_score$ambig3_current_covi2))
 
 ambig_score$ambig3_you_infect <- as.integer(as.character(ambig_score$ambig3_you_infect))
 ambig_score$ambig3_family_infect <- as.integer(as.character(ambig_score$ambig3_family_infect))
@@ -167,17 +170,109 @@ ambig_score$ambig3_family_infect <- as.integer(as.character(ambig_score$ambig3_f
 # droplevels(ambig_score$mTurkCode)
 ```
 
-sum up
+
 ```{r}
+ambig_score
+```
 
-ambig_score$sum <- rowSums(ambig_score[ , 2:ncol(ambig_score)])
+```{r}
+colnames(ambig_score)
+```
 
-ambig_score$sum
+
+## correct scale
+Inspect each item, make sure which scales are consistent
+e.g, smaller number indicate less information (ambiguity)
+```{r}
+# 1-6 nonlinear duraion, 1 (less than 15 min) ~ 6 (over 5 hours)
+ambig_score$ambig1_news_perday
+ambig_score$ambig1_news_before
+
+# 1-7 nonlinear duration, 1(Several times a day) ~ 7 (rarely or never)
+ambig_score$ambig1_track_deaths
+
+# 1-7 likert scale, 1 (very-well informed) ~ 7(Very uninformed)
+ambig_score$ambig1_gov_local
+ambig_score$ambig1_you
+ambig_score$ambig1_gov_national
+ambig_score$ambig1_scientists
+ambig_score$ambig1_health_worker
+ambig_score$ambig1_economists
+ambig_score$ambig1_family_friend
+
+# 1-7 likert scale, 1(Extremely severe) ~ 7 (not at all severe)
+ambig_score$ambig3_current_covi1
+ambig_score$ambig3_current_covi2
+
+# 1-7 likert scale, 2(extremely likely) ~ 8 (extremely unlikely)
+# 1: already confirmed infection by test, 9: don't know 
+ambig_score$ambig3_you_infect
+ambig_score$ambig3_family_infect
+
+```
+
+correct scale
+larger number should indicate less information (more ambiguity)
+```{r}
+# 1-6
+ambig_score$ambig1_news_perday <- 7-ambig_score$ambig1_news_perday
+ambig_score$ambig1_news_before <- 7-ambig_score$ambig1_news_before
+
+# 1-7
+ambig_score$ambig3_current_covi1 <- 8-ambig_score$ambig3_current_covi1
+ambig_score$ambig3_current_covi2 <- 8-ambig_score$ambig3_current_covi2
+
+# 2-8, compare with 5 (most uncertain)
+ambig_score$ambig3_you_infect[ambig_score$ambig3_you_infect == 9 | ambig_score$ambig3_you_infect == 1] <- NA 
+ambig_score$ambig3_family_infect[ambig_score$ambig3_family_infect == 9 | ambig_score$ambig3_family_infect == 1] <- NA 
+
+ambig_score$ambig3_you_infect[ambig_score$ambig3_you_infect <= 5 & !is.na(ambig_score$ambig3_you_infect)] <- ambig_score$ambig3_you_infect[ambig_score$ambig3_you_infect <= 5 & !is.na(ambig_score$ambig3_you_infect)] - 1
+
+ambig_score$ambig3_you_infect[ambig_score$ambig3_you_infect > 5 & !is.na(ambig_score$ambig3_you_infect)] <- 9-ambig_score$ambig3_you_infect[ambig_score$ambig3_you_infect > 5 & !is.na(ambig_score$ambig3_you_infect)]
+
+ambig_score$ambig3_family_infect[ambig_score$ambig3_family_infect <= 5 & !is.na(ambig_score$ambig3_family_infect)] <- ambig_score$ambig3_family_infect[ambig_score$ambig3_family_infect <= 5 & !is.na(ambig_score$ambig3_family_infect)] - 1
+
+ambig_score$ambig3_family_infect[ambig_score$ambig3_family_infect > 5 & !is.na(ambig_score$ambig3_family_infect)] <- 9-ambig_score$ambig3_family_infect[ambig_score$ambig3_family_infect > 5 & !is.na(ambig_score$ambig3_family_infect)]
 
 ```
 
 ```{r}
-data.all$ambig1_track_deaths
+ambig_score
+View(ambig_score)
+```
+
+
+## sum up
+```{r}
+
+# some columns have NA, average clusters before summing up
+colnames(ambig_score)
+colnames(ambig_score)[5:11]
+
+# change in news consumption frequency
+ambig_score$news <- ambig_score$ambig1_news_perday - ambig_score$ambig1_news_before
+
+# average of how well-informed
+ambig_score$well_informed <- rowMeans(ambig_score[ , 5:11], na.rm = TRUE)
+
+# average of current situation
+ambig_score$current_situ <- rowMeans(ambig_score[ , 12:13], na.rm = TRUE)
+
+# average of likely to be infected
+ambig_score$infect <- rowMeans(ambig_score[,14:15], na.rm = TRUE)
+
+ambig_score
+
+# average
+ambig_score$ambig_score <- rowMeans(ambig_score[ , 16:19], na.rm = TRUE)
+
+ambig_score$ambig_score
+```
+
+## distribution of ambiguity score
+```{r}
+ggplot(ambig_score, aes(x=ambig_score)) +
+  geom_histogram()
 ```
 
 
